# contacts2notion

./: .env.example  .gitignore  Makefile  PRIVACY.md  README.md  TODO.md  check_schema.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: sync.yml
docs/: CNAME  index.html  privacy.html  style.css  terms.html
src/: config.ts  googleContactsParser.ts  index.ts  notionClient.ts  types.ts
src/contacts2notion/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/contacts2notion/google/: client.py
src/contacts2notion/notion/: client.py  schema.py  sync.py
